fix 3D objects alignment and update experience

--- a/src/index.css
+++ b/src/index.css
@@ -109,7 +109,7 @@ body {
   }
 
   .work-content {
-    @apply col-span-2 rounded-lg bg-black-200 border border-black-300;
+    @apply col-span-1 lg:col-span-2 rounded-lg bg-black-200 border border-black-300;
   }
 
   .work-content_container {
